@startuml CSR_Volunteer_Matching_System_Class_Diagram

!define ENTITY_COLOR #E8F5E9
!define RELATION_COLOR #90CAF9

skinparam class {
    BackgroundColor ENTITY_COLOR
    BorderColor #4CAF50
    ArrowColor RELATION_COLOR
}

' ====================
' CORE ENTITIES
' ====================

class UserAccount {
    - id: UUID
    - email: String {unique}
    - password: String
    - name: String
    - phoneNumber: String
    - address: String
    - dateOfBirth: DateTime
    - status: UserStatus
    - userProfileId: UUID
    --
    ' PIN-specific fields (nullable)
    - age: Integer
    - location: String
    - accessibilityNeeds: String
    - profilePhoto: String
    --
    ' CSR Rep-specific fields (nullable)
    - companyName: String
    - companyRegistrationNumber: String {unique}
    - industry: String
    - contactPerson: String
    - companyAddress: String
    - companyLogo: String
    --
    ' Platform Manager-specific fields (nullable)
    - department: String
    --
    - profileStatus: ProfileStatus
    - createdAt: DateTime
    - updatedAt: DateTime
    --
    ' Instance methods (actually used)
    + getRole(): String
    + toJSON(): Object
    --
    ' Static CRUD methods
    {static} + findAll(page, limit): UserAccount[]
    {static} + findById(id: UUID): UserAccount
    {static} + findByEmail(email: String): UserAccount
    {static} + login(email, password): LoginResult
    {static} + findByUserIdWithProfileName(userId, profileName): UserAccount
    {static} + findByProfileName(profileName, page, limit): UserAccount[]
    {static} + findByStatus(status, page, limit): UserAccount[]
    {static} + create(data: Object): UserAccount
    {static} + update(id: UUID, data: Object): UserAccount
    {static} + delete(id: UUID): Boolean
    {static} + count(): Number
    {static} + countByProfileName(profileName): Number
    {static} + countByStatus(status): Number
    {static} + search(query, page, limit): UserAccount[]
    {static} + suspend(id: UUID): UserAccount
    {static} + activate(id: UUID): UserAccount
    {static} + updatePINProfile(userId, data): UserAccount
    {static} + updateCSRRepProfile(userId, data): UserAccount
    {static} + updatePlatformManagerProfile(userId, data): UserAccount
    {static} + suspendProfile(id: UUID): UserAccount
    {static} + activateProfile(id: UUID): UserAccount
}

class UserProfile {
    - id: UUID
    - name: String {unique}
    - description: String
    - permissions: JSON
    - isActive: Boolean
    - createdAt: DateTime
    - updatedAt: DateTime
    --
    ' Static CRUD methods only (no instance methods used)
    {static} + findAll(): UserProfile[]
    {static} + findById(id: UUID): UserProfile
    {static} + findByName(name: String): UserProfile
    {static} + create(data: Object): UserProfile
    {static} + update(id: UUID, data: Object): UserProfile
    {static} + count(): Number
    {static} + search(query?, isActive?): UserProfile[]
    --
    <<Note: Only 4 static records exist>>
}


' ====================
' SERVICE MANAGEMENT
' ====================

class RequestCategory {
    - id: UUID
    - name: String {unique}
    - description: String
    - iconUrl: String
    - isActive: Boolean
    - createdAt: DateTime
    - updatedAt: DateTime
    --
    ' Static CRUD methods only (no instance methods used)
    {static} + findAll(): RequestCategory[]
    {static} + findActive(): RequestCategory[]
    {static} + findById(id: UUID): RequestCategory
    {static} + create(data: Object): RequestCategory
    {static} + update(id: UUID, data: Object): RequestCategory
    {static} + delete(id: UUID): Boolean
    {static} + search(query?, includeInactive?): RequestCategory[]
    {static} + count(): Number
}

class Request {
    - id: UUID
    - pinId: UUID
    - categoryId: UUID
    - title: String
    - description: String
    - urgency: UrgencyLevel
    - dateNeeded: DateTime
    - location: String
    - status: RequestStatus
    - viewCount: Integer
    - shortlistCount: Integer
    - createdAt: DateTime
    - updatedAt: DateTime
    --
    ' Instance methods (used for JSON serialization)
    + toJSON(): Object
    --
    ' Static CRUD methods
    {static} + findById(id: UUID): Request
    {static} + searchByPIN(pinId, query?, status?, categoryId?, urgency?): Request[]
    {static} + findByStatus(status, page, limit): Request[]
    {static} + findCompletedByPIN(pinId, query?): Request[]
    {static} + create(data: Object): Request
    {static} + update(id: UUID, data: Object): Request
    {static} + delete(id: UUID): Boolean
    {static} + count(): Number
    {static} + countByStatus(status): Number
    {static} + search(query?, status?, urgency?, categoryId?, page, limit): Request[]
    {static} + incrementViewCountDB(id: UUID): void
    {static} + incrementShortlistCountDB(id: UUID): void
    {static} + getViewCount(pinId, requestId): Number
    {static} + getShortlistCount(pinId, requestId): Number
}

' ====================
' MATCHING SYSTEM
' ====================

class Shortlist {
    - id: UUID
    - csrRepId: UUID
    - requestId: UUID
    - createdAt: DateTime
    --
    ' Static CRUD methods only (no instance methods used)
    {static} + findById(id: UUID): Shortlist
    {static} + getShortlistedRequestIds(csrRepId): String[]
    {static} + create(data: Object): Shortlist
    {static} + deleteByCSRRepAndRequest(csrRepId, requestId): Boolean
    {static} + exists(csrRepId, requestId): Boolean
    {static} + search(csrRepId, query?): Shortlist[]
}

class VolunteerOffer {
    - id: UUID
    - csrRepId: UUID
    - requestId: UUID
    - message: String
    - status: OfferStatus
    - createdAt: DateTime
    - updatedAt: DateTime
    --
    ' Static CRUD methods only (no instance methods used)
    {static} + findById(id: UUID): VolunteerOffer
    {static} + exists(csrRepId, requestId): Boolean
    {static} + search(userId, role, status?, page, limit): VolunteerOffer[]
    {static} + create(data: Object): VolunteerOffer
    {static} + update(id: UUID, data: Object): VolunteerOffer
}

class Match {
    - id: UUID
    - requestId: UUID {unique}
    - csrRepId: UUID
    - pinId: UUID
    - status: MatchStatus
    - matchedAt: DateTime
    - completedAt: DateTime
    - cancellationReason: String
    - updatedAt: DateTime
    --
    ' Static CRUD methods only (no instance methods used)
    {static} + findById(id: UUID): Match
    {static} + searchByPIN(pinId, query?, status?): Match[]
    {static} + search(userId, role, status?, query?, page, limit): Match[]
    {static} + create(data: Object): Match
    {static} + update(id: UUID, data: Object): Match
    {static} + count(): Number
}

' ====================
' NOTIFICATIONS
' ====================

class Notification {
    - id: UUID
    - userId: UUID
    - type: NotificationType
    - message: String
    - isRead: Boolean
    - createdAt: DateTime
    --
    ' Static CRUD methods only (no instance methods used)
    {static} + findById(id: UUID): Notification
    {static} + findByUserId(userId, page, limit): Notification[]
    {static} + findUnreadByUserId(userId): Notification[]
    {static} + create(data: Object): Notification
    {static} + markAsRead(id: UUID): Notification
    {static} + markAllAsRead(userId): void
    {static} + countUnread(userId): Number
}

' ====================
' RELATIONSHIPS
' ====================

' UserProfile -> UserAccount (1:M)
UserProfile "1" -- "0..*" UserAccount : has >

' UserAccount Relationships (role-based)
UserAccount "1" -- "0..*" Request : creates (PIN role) >
UserAccount "1" -- "0..*" Shortlist : saves (CSR role) >
UserAccount "1" -- "0..*" VolunteerOffer : makes (CSR role) >
UserAccount "1" -- "0..*" Match : involved in >

' Request Relationships
RequestCategory "1" -- "0..*" Request : categorizes >
Request "1" -- "0..*" Shortlist : saved by >
Request "1" -- "0..*" VolunteerOffer : receives >
Request "1" -- "0..1" Match : matched with >

' Notification
UserAccount "1" -- "0..*" Notification : receives >

@enduml
